[11.24] released ...
* An 'imap-list-depth' variable was introduced to control the maximum depth
  of the folder traversal for the 'folders' command.
* If standard output is not a terminal device, the output of the 'folders'
  command applied to an IMAP account is no longer arranged into columns.
* Only applicable if Mozilla NSS is used for SSL support: If the certificate
  of the server contains a dNSName, NSS ignores the CN. Thus if the CN
  contains a name that does not also appear as one of the dNSNames, the
  certificate is rejected. This case is now verified separately in nail,
  and the certificate is accepted if the CN matches the host name of the
  server.

[11.23] released 6/28/05
* The output for the '~p' tilde escape was extended to include the fields
  implied by the 'from', 'replyto', 'sender', and 'ORGANIZATION' variables
  (Proposed by Bob Tennent).
* The 'autocc' and 'autobcc' variables are now evaluated before composition
  of a message begins. The resulting addresses can thus be edited and viewed
  using the '~b', '~c', '~h', and '~p' tilde escapes, but changing the values
  of the 'autocc' and 'autobcc' variables using '~:set' has no effect on the
  currently composed message anymore.
* The values of the 'from' and 'replyto' variables can now contain multiple
  addresses.
* A 'sender' variable was introduced to set the content of the 'Sender:'
  field for outgoing messages.
* A '~H' tilde escape was introduced. It allows to set message-specific values
  for the 'From', 'Reply-To', 'Sender', and 'Organization' header fields.
  These fields are now also accepted in the editor output with the
  'editheaders' variable.
* The '-r' option now actually disables tilde escapes as documented (Bugreport
  by Bob Tennent).
* The INSTALL file now notes that sendmail must support the '-r' option if
  the '-r' option of nail is used (Issue reported by Attila Zimler and
  Allan Peda).
* The 'move' command does not anymore mark messages as moved if writing to