@@ -40,7 +40,7 @@
 #ifdef	DOSCCS
 static char copyright[]
 = "@(#) Copyright (c) 1980, 1993 The Regents of the University of California.  All rights reserved.\n";
-static char sccsid[] = "@(#)main.c	2.44 (gritter) 3/4/05";
+static char sccsid[] = "@(#)main.c	2.45 (gritter) 7/5/05";
 #endif	/* DOSCCS */
 #endif /* not lint */
 
@@ -86,7 +86,7 @@ static void setscreensize(int dummy);
 int 
 main(int argc, char *argv[])
 {
-	const char optstr[] = "A:BHFINVT:a:b:c:dDefh:inqr:s:tu:v~";
+	const char optstr[] = "A:BHFINVT:Ra:b:c:dDefh:inqr:s:tu:v~";
 	int i, existonly = 0, headersonly = 0, sendflag = 0;
 	struct name *to, *cc, *bcc, *smopts;
 	struct attachment *attach;
@@ -334,10 +334,13 @@ main(int argc, char *argv[])
 		case 'A':
 			Aflag = optarg;
 			break;
+		case 'R':
+			Rflag = 1;
+			break;
 		case '?':
 usage:
 			fprintf(stderr, catgets(catd, CATSET, 135,
-"Usage: %s -eiIUdFntBDNHV~ -T FILE -u USER -h hops -r address -s SUBJECT -a FILE -q FILE -f FILE -A ACCOUNT -b USERS -c USERS users\n"), progname);
+"Usage: %s -eiIUdFntBDNHRV~ -T FILE -u USER -h hops -r address -s SUBJECT -a FILE -q FILE -f FILE -A ACCOUNT -b USERS -c USERS users\n"), progname);
 			exit(2);
 		}
 	}
@@ -365,6 +368,10 @@ usage:
 	if (sendflag && !tflag && to == NULL) {
 		fprintf(stderr, catgets(catd, CATSET, 138,
 			"Send options without primary recipient specified.\n"));
+		goto usage;
+	}
+	if (Rflag && to != NULL) {
+		fprintf(stderr, "The -R option is meaningless in send mode.\n");
 		goto usage;
 	}
 	if (Iflag && ef == NULL) {
